/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package requestreceiver;

import "requestpb/requestpb.proto";

option go_package = "github.com/hyperledger-labs/mirbft/pkg/requestreceiver";

service RequestReceiver {
  rpc Listen(stream requestpb.Request) returns(ByeBye);
}

message ByeBye {
}
